--- a/users/templates/certificalar.html
+++ b/users/templates/certificalar.html
@@ -1,79 +1,105 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-{#    Lazim#}
+    {# Lazim #}
 
     <body>
     <div class="preloader"></div>
     <section class="request-a-call-back pdt-10 pdb-10" data-background="img/bg/6.html">
         <div class="container">
             <div class="row">
-                {% if participants %}
-                    {% for participant in participants %}
-                        <div class="col-lg-6">
-                            <div class="faq-block">
-                                <div class="accordion">
-                                    <div class="accordion-item">
-                                        <div class="accordion-header active">
-                                            <h5 class="title">{{ participant.name }} {{ participant.surname }}</h5>
-                                            <span class="fas fa-arrow-right"></span>
+            <div class="col-lg-12" style="margin-bottom: 50px">
+                    <div class="faq-block">
+                        <div class="accordion">
+                            <div class="header-searchbox-style-two d-none d-xl-block" >
+                                <div class="show-searchbox">
+                                    <form>
+                                        <div>
+                                            <input type="text" name="keyword" class="form-control"  placeholder="Search..." >
                                         </div>
-                                        <div class="accordion-body">
-                                            <table class="table table-bordered">
-                                                <thead>
-                                                <tr style="text-align: center">
-                                                    <th scope="col">Education</th>
-                                                    <th scope="col">Contact</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr style="text-align: center">
-                                                    <th rowspan="3">{{ participant.university }}<br> {{ participant.department }}
-                                                        <br> {{ participant.edu_deg }}</th>
-                                                    <td rowspan="2">{{ participant.phone_number }}
-                                                        <br> {{ participant.email }}</td>
-                                                </tr>
-                                                </tbody>
-                                                <tbody>
-                                                {% for certificate in certificates %}
-                                                    {% for activity in activities %}
-                                                        {% for act in participant.activity_name.all %}
-                                                            {% if certificate.participant_name.name == participant.name and activity.id == certificate.activity_name.id and act.id == certificate.activity_name.id %}
-                                                                    <tr style="text-align: center">
-                                                                        <th colspan="3">
-                                                                            <a href="{% url 'certificate' certificate.cer_code %}">{{ certificate.activity_name }}</a>
-                                                                    </tr>
-                                                            {% endif %}
-                                                        {% endfor %}
-                                                    {% endfor %}
-                                                {% endfor %}
-                                                </tbody>
-
-                                            </table>
-                                        </div>
-                                    </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
-                    {% endfor %}
+                    </div>
+                </div>
 
-                {% else %}
-                    <div class="col-lg-12">
+
+
+
+
+
+
+
+
+            {% if participants %}
+                {% for participant in participants %}
+                    <div class="col-lg-4">
                         <div class="faq-block">
                             <div class="accordion">
                                 <div class="accordion-item">
                                     <div class="accordion-header active">
-                                        <h5 class="title" style="text-align: center">There are no Participants</h5>
+                                        <h5 class="title">{{ participant.name }} {{ participant.surname }}</h5>
+                                        <span class="fas fa-arrow-right"></span>
+                                    </div>
+                                    <div class="accordion-body">
+                                        <table class="table table-bordered">
+                                            <thead>
+                                            <tr style="text-align: center">
+                                                <th scope="col">Education</th>
+                                                <th scope="col">Contact</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr style="text-align: center">
+                                                <th rowspan="3">{{ participant.university }}<br> {{ participant.department }}
+                                                    <br> {{ participant.edu_deg }}</th>
+                                                <td rowspan="2">{{ participant.phone_number }}
+                                                    <br> {{ participant.email }}</td>
+                                            </tr>
+                                            </tbody>
+                                            <tbody>
+                                            {% for certificate in certificates %}
+                                                {% for activity in activities %}
+                                                    {% for act in participant.activity_name.all %}
+                                                        {% if certificate.participant_name.name == participant.name and activity.id == certificate.activity_name.id and act.id == certificate.activity_name.id %}
+                                                            <tr style="text-align: center">
+                                                                <th colspan="3">
+                                                                    <a href="{% url 'certificate' certificate.cer_code %}">{{ certificate.activity_name }}</a>
+                                                            </tr>
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                {% endfor %}
+                                            {% endfor %}
+                                            </tbody>
+
+                                        </table>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                {% endif %}
+                {% endfor %}
+
+            {% else %}
+                <div class="col-lg-12">
+                    <div class="faq-block">
+                        <div class="accordion">
+                            <div class="accordion-item">
+                                <div class="accordion-header active">
+                                    <h5 class="title" style="text-align: center">There are no Participants</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
 
 
-            </div>
+
+
         </div>
+
     </section>
     </body>
 
